@@ -2,6 +2,7 @@
 - more doc fixes
 - fix similarity rotate+scale, thanks Topochicho
 - fix 16-bit PNG save, thanks John
+- fix dzsave date on Windows, thanks John
 
 25/7/14 started 7.40.5
 - fix a race in im_maxpos_avg()
